add Dashboard of Mentor

--- a/final-project-fe/Pages/Mentor/MentorPage/Dashboard.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/Dashboard.cshtml
@@ -50,18 +50,13 @@
             <div class="col-xl-3 col-lg-4 col-sm-6">
                 <div class="icon-card mb-30">
                     <div class="icon purple">
-                        <i class="lni lni-cart-full"></i>
+                        <i class="lni lni-library"></i>
                     </div>
                     <div class="content">
-                        <h6 class="mb-10">New Orders</h6>
-                        <h3 class="text-bold mb-10">34567</h3>
-                        <p class="text-sm text-success">
-                            <i class="lni lni-arrow-up"></i> +2.00%
-                            <span class="text-gray">(30 days)</span>
-                        </p>
+                        <h6 class="mb-10">Total Courses</h6>
+                        <h3 class="text-bold mb-10">@Model.TotalCourse</h3>
                     </div>
                 </div>
-                <!-- End Icon Cart -->
             </div>
             <!-- End Col -->
             <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -71,14 +66,9 @@
                     </div>
                     <div class="content">
                         <h6 class="mb-10">Total Income</h6>
-                        <h3 class="text-bold mb-10">$74,567</h3>
-                        <p class="text-sm text-success">
-                            <i class="lni lni-arrow-up"></i> +5.45%
-                            <span class="text-gray">Increased</span>
-                        </p>
+                        <h3 class="text-bold mb-10">@Model.TotalIncome.ToString("N2") Point</h3>
                     </div>
                 </div>
-                <!-- End Icon Cart -->
             </div>
             <!-- End Col -->
             <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -87,15 +77,10 @@
                         <i class="lni lni-credit-cards"></i>
                     </div>
                     <div class="content">
-                        <h6 class="mb-10">Total Expense</h6>
-                        <h3 class="text-bold mb-10">$24,567</h3>
-                        <p class="text-sm text-danger">
-                            <i class="lni lni-arrow-down"></i> -2.00%
-                            <span class="text-gray">Expense</span>
-                        </p>
+                        <h6 class="mb-10">Total Withdrawal</h6>
+                        <h3 class="text-bold mb-10">@Model.Withdraw.Items.Sum(w => w.Points) Point</h3>
                     </div>
                 </div>
-                <!-- End Icon Cart -->
             </div>
             <!-- End Col -->
             <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -104,15 +89,10 @@
                         <i class="lni lni-user"></i>
                     </div>
                     <div class="content">
-                        <h6 class="mb-10">New User</h6>
-                        <h3 class="text-bold mb-10">34567</h3>
-                        <p class="text-sm text-danger">
-                            <i class="lni lni-arrow-down"></i> -25.00%
-                            <span class="text-gray"> Earning</span>
-                        </p>
+                        <h6 class="mb-10">Total Students</h6>
+                        <h3 class="text-bold mb-10">@Model.TotalStudent</h3>
                     </div>
                 </div>
-                <!-- End Icon Cart -->
             </div>
             <!-- End Col -->
         </div>
@@ -122,18 +102,11 @@
                 <div class="card-style mb-30">
                     <div class="title d-flex flex-wrap justify-content-between">
                         <div class="left">
-                            <h6 class="text-medium mb-10">Yearly Stats</h6>
-                            <h3 class="text-bold">$245,479</h3>
+                            <h6 class="text-medium mb-10">Yearly Income</h6>
+                            <h3 class="text-bold">@Model.Payments.Sum().ToString("N2") Point</h3>
                         </div>
                         <div class="right">
                             <div class="select-style-1">
-                                <div class="select-position select-sm">
-                                    <select class="light-bg">
-                                        <option value="">Yearly</option>
-                                        <option value="">Monthly</option>
-                                        <option value="">Weekly</option>
-                                    </select>
-                                </div>
                             </div>
                             <!-- end select -->
                         </div>
@@ -150,17 +123,10 @@
                 <div class="card-style mb-30">
                     <div class="title d-flex flex-wrap align-items-center justify-content-between">
                         <div class="left">
-                            <h6 class="text-medium mb-30">Sales/Revenue</h6>
+                            <h6 class="text-medium mb-30">New student</h6>
                         </div>
                         <div class="right">
                             <div class="select-style-1">
-                                <div class="select-position select-sm">
-                                    <select class="light-bg">
-                                        <option value="">Yearly</option>
-                                        <option value="">Monthly</option>
-                                        <option value="">Weekly</option>
-                                    </select>
-                                </div>
                             </div>
                             <!-- end select -->
                         </div>
@@ -251,239 +217,179 @@
     // =========== chart one start
     const ctx1 = document.getElementById("Chart1").getContext("2d");
     const chart1 = new Chart(ctx1, {
-      type: "line",
-      data: {
-        labels: [
-          "Jan",
-          "Fab",
-          "Mar",
-          "Apr",
-          "May",
-          "Jun",
-          "Jul",
-          "Aug",
-          "Sep",
-          "Oct",
-          "Nov",
-          "Dec",
-        ],
-        datasets: [
-          {
-            label: "",
-            backgroundColor: "transparent",
-            borderColor: "#365CF5",
-            data: [
-              600, 800, 750, 880, 940, 880, 900, 770, 920, 890, 976, 1100,
+        type: "line",
+        data: {
+            labels: [
+                "Jan", "Feb", "Mar", "Apr", "May", "Jun",
+                "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"
             ],
-            pointBackgroundColor: "transparent",
-            pointHoverBackgroundColor: "#365CF5",
-            pointBorderColor: "transparent",
-            pointHoverBorderColor: "#fff",
-            pointHoverBorderWidth: 5,
-            borderWidth: 5,
-            pointRadius: 8,
-            pointHoverRadius: 8,
-            cubicInterpolationMode: "monotone", // Add this line for curved line
-          },
-        ],
-      },
-      options: {
-        plugins: {
-          tooltip: {
-            callbacks: {
-              labelColor: function (context) {
-                return {
-                  backgroundColor: "#ffffff",
-                  color: "#171717"
-                };
-              },
-            },
-            intersect: false,
-            backgroundColor: "#f9f9f9",
-            title: {
-              fontFamily: "Plus Jakarta Sans",
-              color: "#8F92A1",
-              fontSize: 12,
-            },
-            body: {
-              fontFamily: "Plus Jakarta Sans",
-              color: "#171717",
-              fontStyle: "bold",
-              fontSize: 16,
-            },
-            multiKeyBackground: "transparent",
-            displayColors: false,
-            padding: {
-              x: 30,
-              y: 10,
-            },
-            bodyAlign: "center",
-            titleAlign: "center",
-            titleColor: "#8F92A1",
-            bodyColor: "#171717",
-            bodyFont: {
-              family: "Plus Jakarta Sans",
-              size: "16",
-              weight: "bold",
-            },
-          },
-          legend: {
-            display: false,
-          },
+            datasets: [
+                {
+                    label: "Income",
+                    backgroundColor: "transparent",
+                    borderColor: "#365CF5",
+                    data: @Json.Serialize(Model.Payments),
+                    pointBackgroundColor: "transparent",
+                    pointHoverBackgroundColor: "#365CF5",
+                    pointBorderColor: "transparent",
+                    pointHoverBorderColor: "#fff",
+                    pointHoverBorderWidth: 5,
+                    borderWidth: 5,
+                    pointRadius: 8,
+                    pointHoverRadius: 8,
+                    cubicInterpolationMode: "monotone",
+                },
+            ],
         },
-        responsive: true,
-        maintainAspectRatio: false,
-        title: {
-          display: false,
+        options: {
+            plugins: {
+                tooltip: {
+                    bodyColor: '#000000',
+                    titleColor: '#000000',
+                    callbacks: {
+                        label: function (context) {
+                            return context.parsed.y.toFixed(2) + ' point';
+                        }
+                    },
+                    intersect: false,
+                    backgroundColor: "#f9f9f9",
+                    title: {
+                        fontFamily: "Plus Jakarta Sans",
+                        color: "#8F92A1",
+                        fontSize: 12,
+                    },
+                    body: {
+                        fontFamily: "Plus Jakarta Sans",
+                        color: "#171717",
+                        fontStyle: "bold",
+                        fontSize: 16,
+                    },
+                    displayColors: false,
+                    padding: {
+                        x: 30,
+                        y: 10,
+                    },
+                },
+                legend: {
+                    display: false,
+                },
+            },
+            responsive: true,
+            maintainAspectRatio: false,
+            scales: {
+                y: {
+                    grid: {
+                        display: false,
+                        drawTicks: false,
+                        drawBorder: false,
+                    },
+                    ticks: {
+                        color: '#000000',
+                        padding: 35,
+                        callback: function (value) {
+                            return '$' + value;
+                        }
+                    },
+                },
+                x: {
+                    grid: {
+                        drawBorder: false,
+                        color: "rgba(143, 146, 161, .1)",
+                        zeroLineColor: "rgba(143, 146, 161, .1)",
+                    },
+                    ticks: {
+                        color: '#000000',
+                        padding: 20,
+                    },
+                },
+            },
         },
-        scales: {
-          y: {
-            grid: {
-              display: false,
-              drawTicks: false,
-              drawBorder: false,
-            },
-            ticks: {
-              padding: 35,
-              max: 1200,
-              min: 500,
-            },
-          },
-          x: {
-            grid: {
-              drawBorder: false,
-              color: "rgba(143, 146, 161, .1)",
-              zeroLineColor: "rgba(143, 146, 161, .1)",
-            },
-            ticks: {
-              padding: 20,
-            },
-          },
-        },
-      },
     });
     // =========== chart one end
 
     // =========== chart two start
     const ctx2 = document.getElementById("Chart2").getContext("2d");
     const chart2 = new Chart(ctx2, {
-      type: "bar",
-      data: {
-        labels: [
-          "Jan",
-          "Fab",
-          "Mar",
-          "Apr",
-          "May",
-          "Jun",
-          "Jul",
-          "Aug",
-          "Sep",
-          "Oct",
-          "Nov",
-          "Dec",
-        ],
-        datasets: [
-          {
-            label: "",
-            backgroundColor: "#365CF5",
-            borderRadius: 30,
-            barThickness: 6,
-            maxBarThickness: 8,
-            data: [
-              600, 700, 1000, 700, 650, 800, 690, 740, 720, 1120, 876, 900,
+        type: "bar",
+        data: {
+            labels: [
+                "Jan", "Feb", "Mar", "Apr", "May", "Jun",
+                "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"
             ],
-          },
-        ],
-      },
-      options: {
-        plugins: {
-          tooltip: {
-            callbacks: {
-              titleColor: function (context) {
-                return "#8F92A1";
-              },
-              label: function (context) {
-                let label = context.dataset.label || "";
-
-                if (label) {
-                  label += ": ";
-                }
-                label += context.parsed.y;
-                return label;
-              },
+            datasets: [
+                {
+                    label: "Students",
+                    backgroundColor: "#365CF5",
+                    borderRadius: 30,
+                    barThickness: 6,
+                    maxBarThickness: 8,
+                    data: @Json.Serialize(Model.Courses),
+                },
+            ],
+        },
+        options: {
+            plugins: {
+                tooltip: {
+                    bodyColor: '#000000',
+                    titleColor: '#000000',
+                    callbacks: {
+                        label: function (context) {
+                            return context.parsed.y + ' students';
+                        }
+                    },
+                    backgroundColor: "#F3F6F8",
+                    titleAlign: "center",
+                    bodyAlign: "center",
+                    titleFont: {
+                        size: 12,
+                        weight: "bold",
+                        color: "#8F92A1",
+                    },
+                    bodyFont: {
+                        size: 16,
+                        weight: "bold",
+                        color: "#171717",
+                    },
+                    displayColors: false,
+                    padding: {
+                        x: 30,
+                        y: 10,
+                    },
+                },
+                legend: {
+                    display: false,
+                },
             },
-            backgroundColor: "#F3F6F8",
-            titleAlign: "center",
-            bodyAlign: "center",
-            titleFont: {
-              size: 12,
-              weight: "bold",
-              color: "#8F92A1",
-            },
-            bodyFont: {
-              size: 16,
-              weight: "bold",
-              color: "#171717",
-            },
-            displayColors: false,
-            padding: {
-              x: 30,
-              y: 10,
+            responsive: true,
+            maintainAspectRatio: false,
+            scales: {
+                y: {
+                    grid: {
+                        display: false,
+                        drawTicks: false,
+                        drawBorder: false,
+                    },
+                    ticks: {
+                        color: '#000000',
+                        padding: 35,
+                        precision: 0
+                    },
+                },
+                x: {
+                    grid: {
+                        display: false,
+                        drawBorder: false,
+                        color: "rgba(143, 146, 161, .1)",
+                        drawTicks: false,
+                        zeroLineColor: "rgba(143, 146, 161, .1)",
+                    },
+                    ticks: {
+                        color: '#000000',
+                        padding: 20,
+                    },
+                },
             },
         },
-        },
-        legend: {
-          display: false,
-          },
-        legend: {
-          display: false,
-        },
-        layout: {
-          padding: {
-            top: 15,
-            right: 15,
-            bottom: 15,
-            left: 15,
-          },
-        },
-        responsive: true,
-        maintainAspectRatio: false,
-        scales: {
-          y: {
-            grid: {
-              display: false,
-              drawTicks: false,
-              drawBorder: false,
-            },
-            ticks: {
-              padding: 35,
-              max: 1200,
-              min: 0,
-            },
-          },
-          x: {
-            grid: {
-              display: false,
-              drawBorder: false,
-              color: "rgba(143, 146, 161, .1)",
-              drawTicks: false,
-              zeroLineColor: "rgba(143, 146, 161, .1)",
-            },
-            ticks: {
-              padding: 20,
-            },
-          },
-        },
-        plugins: {
-          legend: {
-            display: false,
-          },
-          title: {
-            display: false,
-          },
-        },
-      },
     });
     // =========== chart two end
 
